Adding JVMInformation event to default